[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Scripts/StaticBullet.gd" type="Script" id=1]
[ext_resource path="res://Sprites/cucumber_smol.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64, 32 )

[node name="StaticBullet" type="Area2D" groups=["enemy", "static"]]
collision_mask = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}
lifespan_wait_time = 10

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0.541176, 0.00784314, 1 )
position = Vector2( -0.5946, -1.78382 )
rotation = 0.785397
scale = Vector2( 2.15623, 2.12995 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemy", "static"]]
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.19209e-07, -1.19209e-07 )
scale = Vector2( 1.3, 1.3 )
rect = Rect2( -49, -25, 98, 49 )

[node name="Lifespan" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="." to="." method="_on_StaticBullet_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Lifespan" to="." method="_on_Lifespan_timeout"]
